--- a/main.html
+++ b/main.html
@@ -7,55 +7,41 @@
 </head>
 
 <body>
-	 <div class="block">
-    <button data-ns-test="block-inline-button">Test1</button>
-    <button data-ns-test="block-inline-button">Test2</button>
-  </div>
-
-  <div class="block">
-    <div data-ns-test="block-inline-div">Test1</div>
-    <div data-ns-test="block-inline-div">Test2</div>
-  </div>
-
-  <div class="inline">
-    <span data-ns-test="block-inline-span">Test1</span>
-    <span data-ns-test="block-inline-span">Test2</span>
-  </div>
-
-  <div class="block">
-    <p data-ns-test="block-inline-p">Test1</p>
-    <p data-ns-test="block-inline-p">Test2</p>
-  </div>
-
-  <div class="inline">
-    <input type="text" data-ns-test="block-inline-input" value="Test1">
-    <input type="text" data-ns-test="block-inline-input" value="Test2">
-  </div>
-
-  <div class="inline">
-    <cite data-ns-test="block-inline-cite">Test1</cite>
-    <cite data-ns-test="block-inline-cite">Test2</cite>
-  </div>
-
-  <div class="inline">
-    <code data-ns-test="block-inline-code">Test1</code>
-    <code data-ns-test="block-inline-code">Test2</code>
-  </div>
-
-  <div class="block">
-    <h1 data-ns-test="block-inline-h1">Test1</h1>
-    <h1 data-ns-test="block-inline-h1">Test2</h1>
-  </div>
-
-  <div class="inline">
-    <sup data-ns-test="block-inline-sup">Test1</sup>
-    <sup data-ns-test="block-inline-sup">Test2</sup>
-  </div>
-
-  <div class="inline">
-    <sub data-ns-test="block-inline-sub">Test1</sub>
-    <sub data-ns-test="block-inline-sub">Test2</sub>
-  </div>
+	<div>
+	<button data-ns-test= "block-inline-button">Test1</button>
+		<button data-ns-test= "block-inline-button">Test2</button>
+		Answer:Inline;
+		<div data-ns-test="block-inline-div">Div1</div>
+		<div data-ns-test="block-inline-div">Div2</div>
+		Answer:Block;
+		<span data-ns-test="block-inline-span">span1</span>
+		<span data-ns-test="block-inline-span">span2</span>
+		Answer:Inline;
+		<p data-ns-test="block-inline-p">para1</p>
+		<p data-ns-test="block-inline-p">para2</p>
+		Answer:Block;
+		<input data-ns-test="block-inline-input">Input1</input>
+		<input data-ns-test="block-inline-input">Input2</input>
+		Answer:Inline;
+		<cite data-ns-test="block-inline-cite">Cite1</cite>
+		<cite data-ns-test="block-inline-cite">Cite2</cite>
+		Answer:Inline;
+		<code data-ns-test="block-inline-code">Code1</code>
+		<code data-ns-test="block-inline-code">Code2</code>
+		Answer:Inline;
+		<h1 data-ns-test="block-inline-h1">htag</h1>
+		<h1 data-ns-test="block-inline-h1">Code2</h1>
+		Answer:Block;
+		<sup data-ns-test="block-inline-sup">Code1</sup>
+		<sup data-ns-test="block-inline-sup">Code2</sup>
+		Answer:Inline;
+		<sub data-ns-test="block-inline-sup">Code1</sub>
+		<sub data-ns-test="block-inline-sup">Code2</sub>
+		Answer:Inline;
+		
+		
+		
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
