--- a/main.html
+++ b/main.html
@@ -35,8 +35,8 @@
 		<sup data-ns-test="block-inline-sup">Code1</sup>
 		<sup data-ns-test="block-inline-sup">Code2</sup>
 		Answer:Inline;
-		<sub data-ns-test="block-inline-sup">Code1</sub>
-		<sub data-ns-test="block-inline-sup">Code2</sub>
+		<sub data-ns-test="block-inline-sub">Code1</sub>
+		<sub data-ns-test="block-inline-sub">Code2</sub>
 		Answer:Inline;
 		
 		
