--- a/main.html
+++ b/main.html
@@ -13,23 +13,23 @@
 		Answer:Inline;
 	</div>
 	<div>
-		<div data-ns-test="block-inline-div">Div1</div>
-		<div data-ns-test="block-inline-div">Div2</div>
+		<div data-ns-test="block-inline-div">Test1</div>
+		<div data-ns-test="block-inline-div">Test2</div>
 		Answer:Block;
 	</div>
 	<div>
-		<span data-ns-test="block-inline-span">span1</span>
-		<span data-ns-test="block-inline-span">span2</span>
+		<span data-ns-test="block-inline-span">Test1</span>
+		<span data-ns-test="block-inline-span">Test2</span>
 		Answer:Inline;
 	</div>
 	<div>
-		<p data-ns-test="block-inline-p">para1</p>
-		<p data-ns-test="block-inline-p">para2</p>
+		<p data-ns-test="block-inline-p">Test1</p>
+		<p data-ns-test="block-inline-p">Test2</p>
 		Answer:Block;
 	</div>
 	<div>
-		<input data-ns-test="block-inline-input">Input1</input>
-		<input data-ns-test="block-inline-input">Input2</input>
+		<input data-ns-test="block-inline-input">Test1</input>
+		<input data-ns-test="block-inline-input">Test2</input>
 		Answer:Inline;
 	</div>
 	<div>
