--- a/main.html
+++ b/main.html
@@ -28,8 +28,8 @@
 		Answer: Block;
 	</div>
 	<div>
-		<input data-ns-test="block-inline-input">Test1</input>
-		<input data-ns-test="block-inline-input">Test2</input>
+		<input data-ns-test="block-inline-input" type="text" value="Test1">
+		<input data-ns-test="block-inline-input"  type="text" value="Test2">
 		Answer: Inline;
 	</div>
 	<div>
